--- a/promopay/www/index.html
+++ b/promopay/www/index.html
@@ -12,7 +12,12 @@
     <script src="lib/moment/moment.js"></script>
     <script src="lib/angular-moment/angular-moment.js"></script>
     <script src="lib/angular-ios9-uiwebview-patch/angular-ios9-uiwebview-patch.js"></script>
+    <link   href="lib/ionic-filter-bar/dist/ionic.filter.bar.min.css" rel="stylesheet">
+    <script src="lib/ionic-filter-bar/dist/ionic.filter.bar.min.js"></script>
+    <script type="text/javascript" src="lib/angular-barcode/dist/angular-barcode.min.js"></script>
+
     <!-- cordova script (this will be a 404 during development) -->
+    <script src="lib/ngCordova/dist/ng-cordova.min.js"></script>
     <script src="cordova.js"></script>
 
     <script src="js/app.js"></script>
@@ -22,7 +27,7 @@
     <script src="js/app/app.services.js"></script>
     <script src="js/views.js"></script>
   </head>
-  <body ng-app="your_app_name">
+  <body ng-app="PromoPay">
     <ion-nav-view></ion-nav-view>
   </body>
 </html>
