--- a/promopay/www/index.html
+++ b/promopay/www/index.html
@@ -15,6 +15,8 @@
     <link   href="lib/ionic-filter-bar/dist/ionic.filter.bar.min.css" rel="stylesheet">
     <script src="lib/ionic-filter-bar/dist/ionic.filter.bar.min.js"></script>
     <script type="text/javascript" src="lib/angular-barcode/dist/angular-barcode.min.js"></script>
+    <script type="text/javascript" src="lib/jssha/src/sha1.js"></script>
+    <script type="text/javascript" src="lib/ng-cordova-oauth/dist/ng-cordova-oauth.min.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="lib/ngCordova/dist/ng-cordova.min.js"></script>
