--- a/promopay/www/index.html
+++ b/promopay/www/index.html
@@ -17,6 +17,8 @@
     <script type="text/javascript" src="lib/angular-barcode/dist/angular-barcode.min.js"></script>
     <script type="text/javascript" src="lib/jssha/src/sha1.js"></script>
     <script type="text/javascript" src="lib/ng-cordova-oauth/dist/ng-cordova-oauth.min.js"></script>
+    <script type="text/javascript" src="lib/qrcode/lib/qrcode.min.js"></script>
+    <script type="text/javascript" src="lib/angular-qr/angular-qr.min.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="lib/ngCordova/dist/ng-cordova.min.js"></script>
